# Aha

./: .gitignore  LICENSE  README.md  aha.py  alembic.ini  pyproject.toml  qqbot.py  requirements-full.txt  requirements.txt  run.sh
alembic/: env.py  script.py.mako
bots/: __init__.py  base.py  fastapi.py
bots/apis/: __init__.py  account.py  base.py  group.py  message.py  private.py  support.py
bots/fastapi/: __init__.py
bots/napcat/: __init__.py  utils.py
config/: __init__.py  base.py
core/: api_service.py  arg_parser.py  bot_register.py  cache.py  config.py  database.py  deduplicator.py  dispatcher.py  expr.py  expr.pyi  i18n.py  identity.py  log.py  perms.py  router.py  status.py
core/api/: __init__.py  account.py  group.py  message.py  private.py  support.py
core/transports/: __init__.py  base.py  http.py  websocket.py  websockets.py
cores/: __init__.py  api.py  base.py  metas.py  misc.py  sqlalchemy.py
docs/: LLM.md  llm.py
docs/zh-CN/: Aha 生命周期.md  README.md  (+3 more)
fastapi_modules/: __init__.py  reload.py
locales/: en.yml  zh_CN.yml
metas/: __init__.py  base.py
models/: base.py  core.py  exc.py  metas.py  msg.py  sqlalchemy.py
modules/: __init__.py  keywords.py  misc.py  reload.py  system.py
services/: apscheduler.py  data_store.py  database.py  fastapi.py  file_cache.py  ncatbot.py  playwright.py  point.py
utils/: __init__.py  aha.py  aio.py  api.py  apscheduler.py  asizeof.py  cache.py  container.py  expr.py  fastapi.py  func.py  message_router.py  misc.py  network.py  playwright.py  sqlalchemy.py  string.py  typekit.py  unit.py
(+93 files in other folders)
